--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -5,7 +5,7 @@
 </head>
 <body style="font-size:30px;  font-family: consolas;  background-color: #F5DEB3;">
     <div class='container'>
-        <h1> You have logged out !<br><br><a class="ml-2" href="http://localhost:8000/login">Login Again</a> </h1>
+        <h1> You have logged out !<br><br><a class="ml-2" href="{% url 'login' %}">Login Again</a> </h1>
     </div>
 
 </body>
