--- a/users/templates/users/reg.html
+++ b/users/templates/users/reg.html
@@ -14,7 +14,7 @@
 </head>
 <body style="font-size:30px;  font-family: consolas;  background-color: #F5DEB3;">
     <h1  style="color:navy;"> Register Today !!</h1>
-    <div class='container'><small>Already Have an Account? <a class="ml-2" href="http://localhost:8000/login">Proceed to Login</a>
+    <div class='container'><small>Already Have an Account? <a class="ml-2" href="{% url 'login' %}">Proceed to Login</a>
      </small></div><br>
     
 <form method='post'>
