--- a/exp/templates/exp/add.html
+++ b/exp/templates/exp/add.html
@@ -81,7 +81,7 @@
 
 </div>
 <div class='container' style="background-color: #FF3399">
-      <button onclick="document.location ='http://localhost:8000/logout'" title='LOGOUT' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> LOGOUT </button>
+      <button onclick="document.location ='{% url 'logout' %}'" title='LOGOUT' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> LOGOUT </button>
     </div>
 </form>
 </body>
