--- a/exp/templates/exp/budget.html
+++ b/exp/templates/exp/budget.html
@@ -99,13 +99,13 @@
 </div>
 <p>  </p>
 <div class='container' style="background-color: #FF3399">
-      <button onclick="document.location ='http://localhost:8000/editbd'" title='EDIT BUDGETS' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> EDIT BUDGETS </button>
+      <button onclick="document.location ='{% url 'exp-editbd' %}'" title='EDIT BUDGETS' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> EDIT BUDGETS </button>
 </div>
 <div class='container' style="background-color: #FF3399">
-      <button onclick="document.location ='http://localhost:8000'" title='HOME_PAGE' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> HOME </button>
+      <button onclick="document.location ='{% url 'exp-home' %}'" title='HOME_PAGE' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> HOME </button>
 </div>
 <div class='container' style="background-color: #FF3399">
-      <button onclick="document.location ='http://localhost:8000/logout'" title='LOGOUT' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> LOGOUT </button>
+      <button onclick="document.location ='{% url 'logout' %}'" title='LOGOUT' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> LOGOUT </button>
 </div>
 </body>
 </html>
