--- a/exp/templates/exp/editbd.html
+++ b/exp/templates/exp/editbd.html
@@ -57,7 +57,7 @@
 <input id='submit' type="submit" value="Post" style="width: 500px; height: 45px; font-size: 35px; font-family: consolas ;margin : auto ; display: none;">
 </form>
 <div class='container' style="background-color: #FF3399">
-      <button onclick="document.location ='http://localhost:8000/logout'" title='LOGOUT' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> LOGOUT </button>
+      <button onclick="document.location ='{% url 'logout' %}'" title='LOGOUT' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> LOGOUT </button>
 </div>
 </body>
 </html>
