--- a/exp/templates/exp/home.html
+++ b/exp/templates/exp/home.html
@@ -24,28 +24,28 @@
 <h2 style="color: firebrick; position:relative; left:3%"> ₹ Expense Manager - Home ₹ </h2>
 
 <div class = 'container' style="background-color: #3399FF">
-    <button onclick="document.location ='http://localhost:8000/all'" title='EM - GENERAL' style="font-size: 35px;  font-family: consolas;  width: 25%;"> ALL EXPENSES </button>
-    <button onclick="document.location ='http://localhost:8000/auto'" title='EM - AUTOMOBILES' style="font-size: 35px;  font-family: consolas;  width: 25%; "> AUTOMOBILES </button>
-    <button onclick="document.location ='http://localhost:8000/ent'" title='EM - ENTERTAINMENT' style="font-size: 35px;  font-family: consolas;  width: 25%; "> ENTERTAINMENT </button>
-    <button onclick="document.location ='http://localhost:8000/fam'" title='EM - FAMILY' style="font-size: 35px;  font-family: consolas;  width: 25%; "> FAMILY </button>
+    <button onclick="document.location ='{% url 'exp-all' %}'" title='EM - GENERAL' style="font-size: 35px;  font-family: consolas;  width: 25%;"> ALL EXPENSES </button>
+    <button onclick="document.location ='{% url 'exp-auto' %}'" title='EM - AUTOMOBILES' style="font-size: 35px;  font-family: consolas;  width: 25%; "> AUTOMOBILES </button>
+    <button onclick="document.location ='{% url 'exp-ent' %}'" title='EM - ENTERTAINMENT' style="font-size: 35px;  font-family: consolas;  width: 25%; "> ENTERTAINMENT </button>
+    <button onclick="document.location ='{% url 'exp-fam' %}'" title='EM - FAMILY' style="font-size: 35px;  font-family: consolas;  width: 25%; "> FAMILY </button>
 </div><div class = 'container' style="background-color: #FF8000">   
-    <button onclick="document.location ='http://localhost:8000/food'" title='EM - FOOD' style="font-size: 35px;  font-family: consolas;  width: 25%; "> FOOD </button>
-    <button onclick="document.location ='http://localhost:8000/ins'" title='EM - INSURANCE' style="font-size: 35px;  font-family: consolas;  width: 25%; "> INSURANCE </button>
-    <button onclick="document.location ='http://localhost:8000/tax'" title='EM - TAX' style="font-size: 35px;  font-family: consolas;  width: 25%;"> TAX </button>
-    <button onclick="document.location ='http://localhost:8000/travel'" title='EM - TRAVEL' style="font-size: 35px;  font-family: consolas;  width: 25%; "> TRAVEL </button>
+    <button onclick="document.location ='{% url 'exp-food' %}'" title='EM - FOOD' style="font-size: 35px;  font-family: consolas;  width: 25%; "> FOOD </button>
+    <button onclick="document.location ='{% url 'exp-ins' %}'" title='EM - INSURANCE' style="font-size: 35px;  font-family: consolas;  width: 25%; "> INSURANCE </button>
+    <button onclick="document.location ='{% url 'exp-tax' %}'" title='EM - TAX' style="font-size: 35px;  font-family: consolas;  width: 25%;"> TAX </button>
+    <button onclick="document.location ='{% url 'exp-travel' %}'" title='EM - TRAVEL' style="font-size: 35px;  font-family: consolas;  width: 25%; "> TRAVEL </button>
 </div><div class = 'container' style="background-color: #CCCC00">     
-    <button onclick="document.location ='http://localhost:8000/util'" title='EM - UTILITIES' style="font-size: 35px;  font-family: consolas;  width: 25%; "> UTILITIES </button>
-    <button onclick="document.location ='http://localhost:8000/add'" title='ADD NEW EXPENSE' style="font-size: 35px;  font-family: consolas;  width: 25%;"> ADD NEW EXPENSE </button>
-    <button onclick="document.location ='http://localhost:8000/sch1'" title='SCHEDULE EXPENSE' style="font-size: 35px;  font-family: consolas;  width: 25%; "> SCHEDULE EXPENSE </button>
-    <button onclick="document.location ='http://localhost:8000/report'" title='CSV REPORTS' style="font-size: 35px;  font-family: consolas;  width: 25%; "> CSV REPORTS </button>
+    <button onclick="document.location ='{% url 'exp-util' %}'" title='EM - UTILITIES' style="font-size: 35px;  font-family: consolas;  width: 25%; "> UTILITIES </button>
+    <button onclick="document.location ='{% url 'exp-add' %}'" title='ADD NEW EXPENSE' style="font-size: 35px;  font-family: consolas;  width: 25%;"> ADD NEW EXPENSE </button>
+    <button onclick="document.location ='{% url 'exp-sch1' %}'" title='SCHEDULE EXPENSE' style="font-size: 35px;  font-family: consolas;  width: 25%; "> SCHEDULE EXPENSE </button>
+    <button onclick="document.location ='{% url 'exp-report' %}'" title='CSV REPORTS' style="font-size: 35px;  font-family: consolas;  width: 25%; "> CSV REPORTS </button>
 </div><div class = 'container' style="background-color: #009999">   
-    <button onclick="document.location ='http://localhost:8000/imgup'" title='UPLOAD RECEIPT IMAGE' style="font-size: 35px;  font-family: consolas;  width: 25%;"> UPLOAD RECEIPT</button>
-    <button onclick="document.location ='http://localhost:8000/sch2'" title='VIEW SCHEDULE' style="font-size: 35px;  font-family: consolas;  width: 25%; "> VIEW SCHEDULE </button>
-    <button onclick="document.location ='http://localhost:8000/budget'" title='BUDGET' style="font-size: 35px;  font-family: consolas;  width: 25%; "> BUDGET </button>
-    <button onclick="document.location ='http://localhost:8000/imgdp'" title='VIEW RECEIPTS' style="font-size: 35px;  font-family: consolas;  width: 25%;"> VIEW RECEIPTS </button>
+    <button onclick="document.location ='{% url 'exp-imgup' %}'" title='UPLOAD RECEIPT IMAGE' style="font-size: 35px;  font-family: consolas;  width: 25%;"> UPLOAD RECEIPT</button>
+    <button onclick="document.location ='{% url 'exp-sch2' %}'" title='VIEW SCHEDULE' style="font-size: 35px;  font-family: consolas;  width: 25%; "> VIEW SCHEDULE </button>
+    <button onclick="document.location ='{% url 'exp-budget' %}'" title='BUDGET' style="font-size: 35px;  font-family: consolas;  width: 25%; "> BUDGET </button>
+    <button onclick="document.location ='{% url 'exp-imgdp' %}'" title='VIEW RECEIPTS' style="font-size: 35px;  font-family: consolas;  width: 25%;"> VIEW RECEIPTS </button>
 </div>
 <div class='container' style="background-color: #FF3399">
-      <button onclick="document.location ='http://localhost:8000/logout'" title='LOGOUT' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> LOGOUT </button>
+      <button onclick="document.location ='{% url 'logout' %}'" title='LOGOUT' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> LOGOUT </button>
 </div>
 </body>
 </html>
