--- a/exp/templates/exp/imgup.html
+++ b/exp/templates/exp/imgup.html
@@ -28,7 +28,7 @@
     {% endif %}
 </div> 
 <div class='container' style="background-color: #FF3399">
-      <button onclick="document.location ='http://localhost:8000/logout'" title='LOGOUT' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> LOGOUT </button>
+      <button onclick="document.location ='{% url 'logout' %}'" title='LOGOUT' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> LOGOUT </button>
     </div>
 </body> 
 </html>
