--- a/exp/templates/exp/report.html
+++ b/exp/templates/exp/report.html
@@ -34,14 +34,14 @@
 </form><br>
 {% if output %}
 <a href="{{ BASE_DIR }}/media/report.csv" download>
-<div align=center><button style="width: 500px; height: 45px; font-size: 35px; font-family: consolas ;margin : auto ;" onclick="document.location ='http://localhost:8000/'"> Download</button> </a></div>
+<div align=center><button style="width: 500px; height: 45px; font-size: 35px; font-family: consolas ;margin : auto ;" onclick="document.location ='{% url 'exp-home' %}'"> Download</button> </a></div>
 <div align=center>  <input type="text" value="{{ output }}" style="font-size: 35px; font-family: consolas ; width: 95% ;height: 100%" ></div>
 {% endif %}
 <div class='container' style="background-color: #FF3399">
-      <button onclick="document.location ='http://localhost:8000/budget'" title='BUDGET' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> BUDGET </button>
+      <button onclick="document.location ='{% url 'exp-budget' %}'" title='BUDGET' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> BUDGET </button>
 </div>
 <div class='container' style="background-color: #FF3399">
-      <button onclick="document.location ='http://localhost:8000/logout'" title='LOGOUT' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> LOGOUT </button>
+      <button onclick="document.location ='{% url 'logout' %}'" title='LOGOUT' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> LOGOUT </button>
 </div>
 </body>
 </html>
