--- a/exp/templates/exp/sch2.html
+++ b/exp/templates/exp/sch2.html
@@ -34,10 +34,10 @@
         {% endfor %}  
 </table></div><br>
 <div class='container' style="background-color: #FF3399">
-      <button onclick="document.location ='http://localhost:8000'" title='HOME_PAGE' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> HOME </button>
+      <button onclick="document.location ='{% url 'exp-home' %}'" title='HOME_PAGE' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> HOME </button>
 </div>
 <div class='container' style="background-color: #FF3399">
-      <button onclick="document.location ='http://localhost:8000/logout'" title='LOGOUT' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> LOGOUT </button>
+      <button onclick="document.location ='{% url 'logout' %}'" title='LOGOUT' style="font-size: 35px;  font-family: consolas;  width: 32%; position: relative; left: 34%"> LOGOUT </button>
     </div>
 </body>
 </html>
