--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -16,7 +16,7 @@
     <h1 class='border-bottom mb-4' style="color:navy;"> Login </h1>
     <div class='container'>
         <small>
-         Need an Account? <a  href="http://localhost:8000/register">Sign Up Now !</a>
+         Need an Account? <a  href="{% url 'register' %}">Sign Up Now !</a>
      </small>
     </div><br>
     {% if form.errors %}
